--- a/client/app/index.html
+++ b/client/app/index.html
@@ -49,10 +49,12 @@
 <script type="text/javascript" src="scripts/controllers/posts.js"></script>
 <script type="text/javascript" src="scripts/controllers/post.js"></script>
 <script type="text/javascript" src="scripts/controllers/user.js"></script>
+<script type="text/javascript" src="scripts/controllers/register.js"></script>
 
 <script type="text/javascript" src="scripts/services/posts.js"></script>
 <script type="text/javascript" src="scripts/services/auth.js"></script>
 <script type="text/javascript" src="scripts/services/users.js"></script>
+<script type="text/javascript" src="scripts/services/register.js"></script>
 <!-- endbuild -->
 
 
