--- a/client/app/index.html
+++ b/client/app/index.html
@@ -23,7 +23,7 @@
 <body ng-controller="CheckAuthCtrl">
 <div growl></div>
 
-<section id="main-wrapper" class="theme-dark-blue-full">
+<section id="main-wrapper" class="">
     <header class="animated fadeInDown" id="header" ng-controller="AuthCtrl" ng-include="'views/lib/header.html'"></header>
     <div class="container">
         <div class="animated fadeInUp" data-ng-view></div>
